--- a/source/form.html
+++ b/source/form.html
@@ -53,11 +53,13 @@
           </li>
           <li class="form__item">
             <label for="weight">Вес (кг):*</label>
-            <input type="number" name="weight" placeholder="7" id="weight" min="0" max="125" required>
+            <input type="number" name="weight" placeholder="7" id="weight" min="1" max="125"
+            required>
           </li>
           <li class="form__item">
             <label for="age">Возраст (лет):</label>
-            <input type="number" name="age" placeholder="7" id="age" min="0" max="30" required>
+            <input type="number" name="age" placeholder="7" id="age" min="1" max="30"
+            required>
           </li>
         </ul>
       </fieldset>
