--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,7 +46,7 @@
         <h2 class="catalog__title title">Каталог продукции</h2>
         <ul class="catalog__list">
           <li class="catalog__item">
-            <a class="catalog__link">
+            <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-chiken catalog__image-chiken--little" src="#" width="161"
                 height="172" alt="Маленькая упаковка Кэт Энерджи Про с курицей.">
             </a>
@@ -82,7 +82,7 @@
             <a class="catalog__link catalog__link-order button" href="#">заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link">
+            <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-chiken catalog__image-chiken--big" src="#" width="172"
                 height="196" alt="Большая упаковка Кэт Энерджи Про с курицей.">
             </a>
@@ -118,7 +118,7 @@
             <a class="catalog__link catalog__link-order button" href="#">заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link">
+            <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-fish catalog__image-fish--little" src="#" width="163"
                 height="174" alt="Маленькая упаковка Кэт Энерджи Про с рыбой.">
             </a>
@@ -154,7 +154,7 @@
             <a class="catalog__link catalog__link-order button" href="#">заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link">
+            <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-fish catalog__image-fish--big" src="#" width="172" height="196" alt="Большая упаковка Кэт Энерджи Про с рыбой.">
             </a>
             <div class="parameter">
@@ -189,7 +189,7 @@
             <a class="catalog__link catalog__link-order button" href="#">заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link">
+            <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-mash catalog__image-mash--little" src="#" width="161"
                 height="171" alt="Маленькая упаковка Кэт Энерджи Слим с гречкой.">
             </a>
@@ -225,7 +225,7 @@
             <a class="catalog__link catalog__link-order button" href="#">заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link">
+            <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-mash catalog__image-mash--big" src="#" width="172" height="196" alt="Большая упаковка Кэт Энерджи Слим с гречкой.">
             </a>
             <div class="parameter">
@@ -260,7 +260,7 @@
             <a class="catalog__link catalog__link-order button" href="#">заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link">
+            <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-mash catalog__image-rice--little" src="#" width="163"
                 height="174" alt="Маленькая упаковка Кэт Энерджи Слим с рисом.">
             </a>
