--- a/source/catalog.html
+++ b/source/catalog.html
@@ -45,7 +45,7 @@
       <div class="catalog__wrapper">
         <h2 class="catalog__title title">Каталог продукции</h2>
         <ul class="catalog__list">
-          <li class="catalog__item">
+          <li class="catalog__item card">
             <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-chiken catalog__image-chiken--little" src="#" width="161"
                 height="172" alt="Маленькая упаковка Кэт Энерджи Про с курицей.">
@@ -79,9 +79,9 @@
                 </div>
               </dl>
             </div>
-            <a class="catalog__link catalog__link-order button" href="#">заказать</a>
+            <a class="card__link card__link-order button" href="#">заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item card">
             <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-chiken catalog__image-chiken--big" src="#" width="172"
                 height="196" alt="Большая упаковка Кэт Энерджи Про с курицей.">
@@ -115,9 +115,9 @@
                 </div>
               </dl>
             </div>
-            <a class="catalog__link catalog__link-order button" href="#">заказать</a>
+            <a class="card__link card__link-order button" href="#">заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item card">
             <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-fish catalog__image-fish--little" src="#" width="163"
                 height="174" alt="Маленькая упаковка Кэт Энерджи Про с рыбой.">
@@ -151,9 +151,9 @@
                 </div>
               </dl>
             </div>
-            <a class="catalog__link catalog__link-order button" href="#">заказать</a>
+            <a class="card__link card__link-order button" href="#">заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item card">
             <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-fish catalog__image-fish--big" src="#" width="172" height="196" alt="Большая упаковка Кэт Энерджи Про с рыбой.">
             </a>
@@ -186,9 +186,9 @@
                 </div>
               </dl>
             </div>
-            <a class="catalog__link catalog__link-order button" href="#">заказать</a>
+            <a class="card__link card__link-order button" href="#">заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item card">
             <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-mash catalog__image-mash--little" src="#" width="161"
                 height="171" alt="Маленькая упаковка Кэт Энерджи Слим с гречкой.">
@@ -222,9 +222,9 @@
                 </div>
               </dl>
             </div>
-            <a class="catalog__link catalog__link-order button" href="#">заказать</a>
+            <a class="card__link card__link-order button" href="#">заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item card">
             <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-mash catalog__image-mash--big" src="#" width="172" height="196" alt="Большая упаковка Кэт Энерджи Слим с гречкой.">
             </a>
@@ -257,9 +257,9 @@
                 </div>
               </dl>
             </div>
-            <a class="catalog__link catalog__link-order button" href="#">заказать</a>
+            <a class="card__link card__link-order button" href="#">заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item card">
             <a class="catalog__link" href="#">
               <img class="catalog__image catalog__image-mash catalog__image-rice--little" src="#" width="163"
                 height="174" alt="Маленькая упаковка Кэт Энерджи Слим с рисом.">
@@ -293,14 +293,14 @@
                 </div>
               </dl>
             </div>
-            <a class="catalog__link catalog__link-order button" href="#">заказать</a>
+            <a class="card__link card__link-order button" href="#">заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item card">
             <a class="catalog__link" href="#">
               <p class="catalog__title">Показать еще 100500 товаров</p>
               <span class="catalog__text">На самом деле вкусов гораздо больше!</span>
             </a>
-            <a class="catalog__link catalog__link-all button" href="#">показать все</a>
+            <a class="card__link card__link-order button" href="#">показать все</a>
           </li>
         </ul>
       </div>
@@ -402,7 +402,7 @@
       </div>
     </section>
     <section class="contacts">
-      <h2 class="visually-hidden">Наш адрес</h2>
+      <h2 class="contacts__title visually-hidden">Наш адрес</h2>
       <p class="contacts__invite">Приглашаем к сотрудничеству дилеров!</p>
       <span class="contacts__text">ул. Большая Конюшенная, д. 19/8</span>
       <span class="contacts__text">Санкт-Петербург</span>
