--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle buttom-burger" type="button">
-        <span class="visually-hidden">Открыть меню</span>
+        <span class="main-nav__text visually-hidden">Открыть меню</span>
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
@@ -41,7 +41,7 @@
     </nav>
   </header>
   <main class="main-container">
-    <h1 class="visually-hidden">Кэт энерджи</h1>
+    <h1 class="main-container__title visually-hidden">Кэт энерджи</h1>
     <section class="intro">
       <div class="intro__wrapper">
         <h2 class="intro__title title">Функциональное питание для котов</h2>
@@ -112,9 +112,9 @@
             </dd>
           </div>
         </dl>
-        <p class="result__cost">
-          <span class="result__cost-text">Затраты на питание:</span>
-          <span class="result__cost-text">15 000 руб.</span>
+        <p class="result__cost cost-description">
+          <span class="cost-description__text">Затраты на питание:</span>
+          <span class="cost-description__text">15 000 руб.</span>
         </p>
       </div>
       <div class="result__wrapper slider">
@@ -128,7 +128,7 @@
       </p>
     </section>
     <section class="contacts">
-      <h2 class="visually-hidden">Наш адрес</h2>
+      <h2 class="contacts__title visually-hidden">Наш адрес</h2>
       <p class="contacts__invite">Приглашаем к сотрудничеству дилеров!</p>
       <span class="contacts__text">ул. Большая Конюшенная, д. 19/8</span>
       <span class="contacts__text">Санкт-Петербург</span>
