--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,7 +43,7 @@
   <main class="main-catalog">
     <section class="main-catalog__product catalog">
       <div class="catalog__wrapper">
-        <h2 class="catalog__title title">Каталог продукции</h2>
+        <h1 class="catalog__title title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
@@ -261,7 +261,7 @@
           </li>
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
-              <img class="catalog__image catalog__image-mash catalog__image-rice--little" src="#" width="163"
+              <img class="catalog__image catalog__image-rice catalog__image-rice--little" src="#" width="163"
                 height="174" alt="Маленькая упаковка Кэт Энерджи Слим с рисом.">
             </a>
             <div class="parameter">
@@ -306,7 +306,7 @@
       </div>
     </section>
     <section class="main-catalog__other catalog">
-      <h3 class="catalog__title--other">Дополнительные товары</h3>
+      <h2 class="catalog__title catalog__title--other">Дополнительные товары</h2>
       <ul class="catalog__list">
         <li class="catalog__item parameter">
           <p class="parameter__title parameter__title--other">Сахарозаменитель</p>
@@ -411,7 +411,8 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper">
       <a class="main-footer__link" href="index.html">
-        <img class="logo__image logo-image--text" src="#" width="128" height="24" alt="Текст логотипа Кэт энерджи.">
+        <img class="main-footer__logo-image main-footer__logo-image--text" src="#" width="128" height="24"
+          alt="Текст логотипа Кэт энерджи.">
       </a>
       <div class="main-footer__social social">
         <ul class="social__list">
@@ -430,7 +431,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="copyright__text">HTML Academy</span></a>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="logo__academy" src="#" width="27" height="34" alt="Логотип HTML Academy.">
+          <img class="copyright__logo-academy" src="#" width="27" height="34" alt="Логотип HTML Academy.">
         </a>
       </div>
     </div>
