--- a/source/form.html
+++ b/source/form.html
@@ -41,7 +41,7 @@
     </nav>
   </header>
   <main class="main-form form">
-    <h2 class="form__title title">Подбор программы</h2>
+    <h1 class="form__title title">Подбор программы</h1>
     <p class="form__note">Заполните анкету, и мы подберем программу питания для вашего кота</p>
     <form class="form__filter filter" action="https://echo.htmlacademy.ru/" method="post">
       <fieldset class="filter__group">
@@ -89,7 +89,7 @@
       </fieldset>
       <fieldset class="filter__other">
         <legend class="filter__title">Контактные данные (владельца кота)</legend>
-        <ul class="filter__list form__list--other">
+        <ul class="filter__list filter__list--other">
           <li class="filter__item">
             <label for="email">E-mail:*</label>
             <input type="email" name="mail" placeholder="кuklachev@gmail.com" id="email" required>
@@ -107,29 +107,29 @@
       </fieldset>
       <fieldset class="filter__other">
         <legend class="filter__title">Дополнительно</legend>
-        <ul class="filter__list control__list list-reset">
-          <li class="control__item">
-            <label class="control">
+        <ul class="filter__list control list-reset">
+          <li class="control__list">
+            <label class="control__label">
               <input class="control__input visually-hidden" type="checkbox" name="other-product" checked>
               <span class="control__mark"></span>
               <span class="control__label">Сахарозаменитель</span>
             </label>
           </li>
-          <li class="control__item">
+          <li class="control__list">
             <label class="control">
               <input class="control__input visually-hidden" type="checkbox" name="other-product">
               <span class="control__mark"></span>
               <span class="control__label">Питьевая вода</span>
             </label>
           </li>
-          <li class="control__item">
+          <li class="control__list">
             <label class="control">
               <input class="control__input visually-hidden" type="checkbox" name="other-product">
               <span class="control__mark"></span>
               <span class="control__label">Молоко</span>
             </label>
           </li>
-          <li class="control__item">
+          <li class="control__list">
             <label class="control">
               <input class="control__input visually-hidden" type="checkbox" name="other-product">
               <span class="control__mark"></span>
@@ -151,7 +151,7 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper">
       <a class="main-footer__link" href="index.html">
-        <img class="logo__image logo-image--text" src="#" width="128" height="24" alt="Текст логотипа Кэт энерджи.">
+        <img class="main-footer__logo-image main-footer__logo-image--text" src="#" width="128" height="24" alt="Текст логотипа Кэт энерджи.">
       </a>
       <div class="main-footer__social social">
         <ul class="social__list">
@@ -170,7 +170,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="copyright__text">HTML Academy</span></a>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="logo__academy" src="#" width="27" height="34" alt="Логотип HTML Academy.">
+          <img class="copyright__logo-academy" src="#" width="27" height="34" alt="Логотип HTML Academy.">
         </a>
       </div>
     </div>
