--- a/source/index.html
+++ b/source/index.html
@@ -118,14 +118,14 @@
         </p>
       </div>
       <div class="result__wrapper slider">
-        <img class="result__wrapper-image image-cat--fat slider__item" src="#" width="560" height="512"
+        <img class="result__wrapper-image result__wrapper-image--fat slider__item" src="#" width="560" height="512"
           alt="Толстый кот.">
-        <img class="result__wrapper-image image-cat--slim slider__item" src="#" width="560" height="512"
+        <img class="result__wrapper-image  result__wrapper-image--slim slider__item" src="#" width="560" height="512"
           alt="Худой кот.">
+          <p class="result__toggles slider__toggles">
+            <button class="slider__toggle slider__toggle--current" type="button">1</button>
+          </p>
       </div>
-      <p class="result__toggles slider__toggles">
-        <button class="slider__toggle slider__toggle--current" type="button">1</button>
-      </p>
     </section>
     <section class="contacts">
       <h2 class="contacts__title visually-hidden">Наш адрес</h2>
@@ -137,7 +137,7 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper">
       <a class="main-footer__link" href="index.html">
-        <img class="main-footer__logo-image logo-image--text" src="#" width="128" height="24"
+        <img class="main-footer__logo-image main-footer__logo-image--text" src="#" width="128" height="24"
           alt="Текст логотипа Кэт энерджи.">
       </a>
       <div class="main-footer__social social">
@@ -157,7 +157,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="copyright__text">HTML Academy</span></a>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="logo__academy" src="#" width="27" height="34" alt="Логотип HTML Academy.">
+          <img class="copyright__logo-academy" src="#" width="27" height="34" alt="Логотип HTML Academy.">
         </a>
       </div>
     </div>
