--- a/source/catalog.html
+++ b/source/catalog.html
@@ -47,8 +47,15 @@
         <ul class="catalog__list">
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
-              <img class="catalog__image catalog__image-chiken catalog__image-chiken--little" src="#" width="161"
-                height="172" alt="Маленькая упаковка Кэт Энерджи Про с курицей.">
+              <picture>
+                <source width="161" height="172" type="image/png" media="(min-width: 1440px)"
+                  srcset="images/energy-pro-chiken@1x.png 1x, images/energy-pro-chiken@2x.png 2x">
+                <source width="161" height="172" type="image/png" media="(min-width: 768px)"
+                  srcset="images/energy-pro-chiken@1x.png 1x, images/energy-pro-chiken@2x.png 2x">
+                <img class="catalog__image catalog__image-chiken catalog__image-chiken--little"
+                  src="images/energy-pro-chiken@1x.png" srcset="images/energy-pro-chiken@2x.png 2x" width="68"
+                  height="86" alt="Маленькая упаковка Кэт Энерджи Про с курицей.">
+              </picture>
             </a>
             <div class="parameter">
               <p class="parameter__title">Cat Energy PRO 500 г</p>
@@ -83,8 +90,15 @@
           </li>
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
-              <img class="catalog__image catalog__image-chiken catalog__image-chiken--big" src="#" width="172"
-                height="196" alt="Большая упаковка Кэт Энерджи Про с курицей.">
+              <picture>
+                <source width="172" height="196" type="image/png" media="(min-width: 1440px)"
+                  srcset="images/energy-pro-chiken-big@1x.png 1x, images/energy-pro-chiken-big2x.png 2x">
+                <source width="168" height="206" type="image/png" media="(min-width: 768px)"
+                  srcset="images/energy-pro-chiken-big@1x.png 1x, images/energy-pro-chiken-big@2x.png 2x">
+                <img class="catalog__image catalog__image-chiken catalog__image-chiken--big"
+                  src="images/energy-pro-chiken-big@1x.png" srcset="images/energy-pro-chiken-big@2x.png 2x" width="84"
+                  height="100" alt="Большая упаковка Кэт Энерджи Про с курицей.">
+              </picture>
             </a>
             <div class="parameter">
               <p class="parameter__title">Cat Energy PRO 1000 г</p>
@@ -119,8 +133,15 @@
           </li>
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
-              <img class="catalog__image catalog__image-fish catalog__image-fish--little" src="#" width="163"
-                height="174" alt="Маленькая упаковка Кэт Энерджи Про с рыбой.">
+              <picture>
+                <source width="163" height="174" type="image/png" media="(min-width: 1440px)"
+                  srcset="images/energy-pro-fish@1x.png 1x, images/energy-pro-fish@2x.png 2x">
+                <source width="163" height="174" type="image/png" media="(min-width: 768px)"
+                  srcset="images/energy-pro-fish@1x.png 1x, images/energy-pro-fish@2x.png 2x">
+                <img class="catalog__image catalog__image-fish catalog__image-fish--little"
+                  src="images/energy-pro-fish@1x.png" srcset="images/energy-pro-fish@2x.png 2x" width="68" height="78"
+                  alt="Маленькая упаковка Кэт Энерджи Про с рыбой.">
+              </picture>
             </a>
             <div class="parameter">
               <p class="parameter__title">Cat Energy PRO 500 г</p>
@@ -155,7 +176,15 @@
           </li>
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
-              <img class="catalog__image catalog__image-fish catalog__image-fish--big" src="#" width="172" height="196" alt="Большая упаковка Кэт Энерджи Про с рыбой.">
+              <picture>
+                <source width="172" height="196" type="image/png" media="(min-width: 1440px)"
+                  srcset="images/energy-pro-fish-big@1x.png 1x, images/energy-pro-fish-big2x.png 2x">
+                <source width="168" height="200" type="image/png" media="(min-width: 768px)"
+                  srcset="images/energy-pro-fish-big@1x.png 1x, images/energy-pro-fish-big@2x.png 2x">
+                <img class="catalog__image catalog__image-fish catalog__image-fish--big"
+                  src="images/energy-pro-fish-big@1x.png" srcset="images/energy-pro-fish-big@2x.png 2x" width="84"
+                  height="100" alt="Большая упаковка Кэт Энерджи Про с рыбой.">
+              </picture>
             </a>
             <div class="parameter">
               <p class="parameter__title">Cat Energy PRO 1000 г</p>
@@ -190,8 +219,15 @@
           </li>
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
-              <img class="catalog__image catalog__image-mash catalog__image-mash--little" src="#" width="161"
-                height="171" alt="Маленькая упаковка Кэт Энерджи Слим с гречкой.">
+              <picture>
+                <source width="161" height="171" type="image/png" media="(min-width: 1440px)"
+                  srcset="images/energy-pro-mash@1x.png 1x, images/energy-pro-mash@2x.png 2x">
+                <source width="161" height="171" type="image/png" media="(min-width: 768px)"
+                  srcset="images/energy-pro-mash@1x.png 1x, images/energy-pro-mash@2x.png 2x">
+                <img class="catalog__image catalog__image-mash catalog__image-mash--little"
+                  src="images/energy-pro-mash@1x.png" srcset="images/energy-pro-mash@2x.png 2x" width="68" height="78"
+                  alt="Маленькая упаковка Кэт Энерджи Слим с гречкой.">
+              </picture>
             </a>
             <div class="parameter">
               <p class="parameter__title">Cat Energy SLIM 500 г</p>
@@ -226,7 +262,15 @@
           </li>
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
-              <img class="catalog__image catalog__image-mash catalog__image-mash--big" src="#" width="172" height="196" alt="Большая упаковка Кэт Энерджи Слим с гречкой.">
+              <picture>
+                <source width="172" height="196" type="image/png" media="(min-width: 1440px)"
+                  srcset="images/energy-pro-mash-big@1x.png 1x, images/energy-pro-mash-big2x.png 2x">
+                <source width="168" height="200" type="image/png" media="(min-width: 768px)"
+                  srcset="images/energy-pro-mash-big@1x.png 1x, images/energy-pro-mash-big@2x.png 2x">
+                <img class="catalog__image catalog__image-mash catalog__image-mash--big"
+                  src="images/energy-pro-mash-big@1x.png" srcset="images/energy-pro-mash-big@2x.png 2x" width="84"
+                  height="100" alt="Большая упаковка Кэт Энерджи Слим с гречкой.">
+              </picture>
             </a>
             <div class="parameter">
               <p class="parameter__title">Cat Energy SLIM 1000 г</p>
@@ -261,8 +305,15 @@
           </li>
           <li class="catalog__item card">
             <a class="catalog__link" href="#">
-              <img class="catalog__image catalog__image-rice catalog__image-rice--little" src="#" width="163"
-                height="174" alt="Маленькая упаковка Кэт Энерджи Слим с рисом.">
+              <picture>
+                <source width="163" height="174" type="image/png" media="(min-width: 1440px)"
+                  srcset="images/energy-pro-rice@1x.png 1x, images/energy-pro-rice@2x.png 2x">
+                <source width="163" height="174" type="image/png" media="(min-width: 768px)"
+                  srcset="images/energy-pro-rice@1x.png 1x, images/energy-pro-rice@2x.png 2x">
+                <img class="catalog__image catalog__image-rice catalog__image-rice--little"
+                  src="images/energy-pro-rice@1x.png" srcset="images/energy-pro-rice@2x.png 2x" width="72" height="84"
+                  alt="Маленькая упаковка Кэт Энерджи Слим с рисом.">
+              </picture>
             </a>
             <div class="parameter">
               <p class="parameter__title">Cat Energy SLIM 500 г</p>
