--- a/source/index.html
+++ b/source/index.html
@@ -49,8 +49,12 @@
         <a class="intro__link button" href="#">Подобрать программу</a>
       </div>
       <div class="intro__wrapper">
-        <img class="intro__wrapper-food-image" src="#" width="552" height="499"
+        <picture>
+          <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/cat-energy-product@1x.png 1x, images/cat-energy-product@2x.png 2x">
+          <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/cat-energy-product@1x.png 1x, images/cat-energy-product@2x.png 2x">
+        <img class="intro__wrapper-food-image" src="images/cat-energy-product@1x.png" srcset="images/cat-energy-product@2x.png 2x" width="280" height="270"
           alt="Корм для питомцев с курицей от Кэт энерджи.">
+        </picture>
       </div>
     </section>
     <section class="product-type">
@@ -118,10 +122,18 @@
         </p>
       </div>
       <div class="result__wrapper slider">
-        <img class="result__wrapper-image result__wrapper-image--fat slider__item" src="#" width="560" height="512"
+        <picture>
+        <source type="image/png" width="560" height="512" media="(min-width: 1440px)" srcset="images/fat-cat@1x.png 1x, images/fat-cat@2x.png 2x">
+        <source type="image/png" width="560" height="512" media="(min-width: 768px)" srcset="images/fat-cat@1x.png 1x, images/fat-cat@2x.png 2x">
+        <img class="result__wrapper-image result__wrapper-image--fat slider__item" src="images/fat-cat@1x.png" srcset="images/fat-cat@2x.png 2x" width="280" height="256"
           alt="Толстый кот.">
-        <img class="result__wrapper-image  result__wrapper-image--slim slider__item" src="#" width="560" height="512"
+        </picture>
+          <picture>
+            <source type="image/png" width="560" height="512" media="(min-width: 1440px)" srcset="images/slim-cat@1x.png 1x, images/slim-cat@2x.png 2x">
+            <source type="image/png" width="560" height="512" media="(min-width: 768px)" srcset="images/slim-cat@1x.png 1x, images/slim-cat@2x.png 2x">
+        <img class="result__wrapper-image  result__wrapper-image--slim slider__item" src="images/slim-cat@1x.png" srcset="images/slim-cat@2x.png 2x" width="280" height="256"
           alt="Худой кот.">
+          </picture>
           <p class="result__toggles slider__toggles">
             <button class="slider__toggle slider__toggle--current" type="button">1</button>
           </p>
